...
    >
      <Tab.Screen
        name="HomeTab"
        component={HomeStack}
        options={{
          tabBarLabel: t('nav.home'),
          tabBarButtonTestID: 'main-tab-home',
        }}
      />
      <Tab.Screen
        name="DmTab"
        component={DmStack}
        options={{
          tabBarLabel: t('nav.dms'),
          tabBarBadge: unreadDmCount > 0 ? unreadDmCount : undefined,
          tabBarBadgeStyle: styles.tabBadge,
          tabBarButtonTestID: 'main-tab-dm',
        }}
      />
      <Tab.Screen
        name="FriendsTab"
        component={FriendsScreen}
        options={{
...
